# simd

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
benches/: mandelbrot.rs  matrix.rs
examples/: axpy.rs  dot-product.rs  fannkuch-redux-nosimd.rs  fannkuch-redux.rs  mandelbrot.rs  nbody.rs  spectral-norm.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
simd/: index.html  sidebar-items.js  struct.bool16i.html  struct.bool16ix8.html  struct.bool32f.html  struct.bool32fx4.html  struct.bool32i.html  struct.bool32ix4.html  struct.bool8i.html  struct.bool8ix16.html  struct.f32x4.html  struct.i16x8.html  struct.i32x4.html  struct.i8x16.html  struct.u16x8.html  struct.u32x4.html  struct.u8x16.html  trait.Simd.html
simd/aarch64/: index.html  sidebar-items.js
simd/arm/: index.html
simd/v256/: sidebar-items.js  struct.bool16ix16.html  struct.bool32fx8.html  struct.bool32ix8.html  struct.bool64fx4.html  struct.bool64ix4.html  struct.bool8ix32.html  struct.f32x8.html  struct.f64x4.html  struct.i16x16.html  struct.i32x8.html  struct.i64x4.html  struct.i8x32.html  struct.u16x16.html  struct.u32x8.html  struct.u64x4.html  struct.u8x32.html  trait.LowHigh128.html
simd/x86/: index.html  sidebar-items.js
src/: aarch64.rs  avx.rs  avx2.rs  common.rs  lib.rs  neon.rs  sixty_four.rs  sse2.rs  sse3.rs  sse4_1.rs  ssse3.rs  v256.rs
src/aarch64/: mod.rs  neon.rs
src/arm/: mod.rs  neon.rs
src/x86/: avx.rs  avx2.rs  mod.rs  sse2.rs  sse3.rs  sse4_1.rs  sse4_2.rs  ssse3.rs
(+153 files in other folders)
